--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-Flask
-Flask-RESTful
-Flask-SQLAlchemy
-Flask-HTTPAuth
+Flask==0.11.1
+Flask-HTTPAuth==3.1.2
+Flask-RESTful==0.3.5
+Flask-SQLAlchemy==2.1
+sqlalchemy-migrate==0.10.0
